[gd_scene load_steps=6 format=2]

[ext_resource path="res://tongue_end_bullet.png" type="Texture" id=1]
[ext_resource path="res://PlayerTongue.gd" type="Script" id=2]
[ext_resource path="res://sfx/tongue.wav" type="AudioStream" id=3]
[ext_resource path="res://sfx/tonguestick.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 2.62027

[node name="PlayerTongue" type="Node2D"]
script = ExtResource( 2 )

[node name="ShootSoundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "Sfx"

[node name="StickSoundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "Sfx"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.79713, 0.867174 )
texture = ExtResource( 1 )

[node name="TongueRaycast" type="RayCast2D" parent="."]
cast_to = Vector2( 10, 0 )
collision_mask = 200
collide_with_areas = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 200

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )
